--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
                 <div class="home__data">
                     <span class="home__greeting">Hello, I'm</span>
                     <h1 class="home__name">Mukesh Jena</h1>
-                    <h3 class="home__education">Frontend Developer || Flutter Developer</h3>
+                    <h3 class="home__education">Frontend Developer || Flutter Developer || Android Developer</h3>
 
                     <div class="home__button">
-                        <a download="" href="assets/pdf/Resume_Updated.pdf" class="button button--ghost">
+                        <a download="" href="assets/pdf/Resume.pdf" class="button button--ghost">
                             Download CV
                         </a>
 
@@ -96,7 +96,7 @@
                 </div>
 
                 <div class="home__social">
-                    <a href="https://www.linkedin.com/in/mukesh-jena-7b9856261/" target="_blank" class="home__social-link">
+                    <a href="https://www.linkedin.com/in/mukesh-jena/" target="_blank" class="home__social-link">
                         <i class='bx bxl-linkedin'></i>
                     </a>
                     <a href="https://github.com/mukeshjena" target="_blank" class="home__social-link">
@@ -142,7 +142,7 @@
                     </div>
 
                     <p class="about__description">
-                        I'm Mukesh Jena, an expert in Flutter and frontend web development. 
+                        I'm Mukesh Jena, an expert in Flutter, Android and frontend web development. 
                         I excel in creating cross-platform mobile apps and web experiences with 
                         innovation, and high-quality solutions.
                     </p>
