--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <div class="home__data">
                     <span class="home__greeting">Hello, I'm</span>
                     <h1 class="home__name">Mukesh Jena</h1>
-                    <h3 class="home__education">Frontend Developer || Flutter Developer || Android Developer</h3>
+                    <h3 class="home__education">Flutter Developer || UI/UX || Web Developer</h3>
 
                     <div class="home__button">
                         <a download="" href="assets/pdf/Resume.pdf" class="button button--ghost">
