--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
 </head>
 
 <body>
+    <!--=============== PRE-LOADER ===============-->
+    <div class="loading-container">
+        <div class="loading-text">
+          <span>M</span>
+          <span>U</span>
+          <span>K</span>
+          <span>E</span>
+          <span>S</span>
+          <span>H</span>
+        </div>
+      </div>
     <!--=============== HEADER ===============-->
     <header class="header" id="header">
         <nav class="nav container">
